added log out option

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,3 +8,5 @@
     =link_to 'Sign up', new_admin_registration_path
   %li 
     =link_to 'All Admins', admins_path    
+  %li 
+    =link_to 'Log Out', destroy_admin_session_path, method: :delete    
