updated views and controllers syntax

--- a/app/views/admins/index.html.haml
+++ b/app/views/admins/index.html.haml
@@ -17,7 +17,7 @@
           %td{"data-label" => "Last Name"}
             = admin.last_name
           %td{"data-label" => "Contact Number"}
-            = admin.cpntact_number
+            = admin.contact_number
           %td{"data-label" => "Address"}
             = admin.address
           %td{"data-label" => "Actions"}  
