--- a/app/views/admins/show.html.haml
+++ b/app/views/admins/show.html.haml
@@ -1,18 +1,20 @@
-%h1= @admin.username
-%p= @admin.email
-
 %table
   %thead
     %tr
-      %th Full Name 
-      %th Password
-      %th Actions
+      %th First Name 
+      %th Last Name
+      %th Contact Number
+      %th Address
   %tbody
     %tr
-      %td{"data-label" => "Full Name"}
-        = @admin.fullname
-      %td{"data-label" => "Password"}
-        = @admin.password
+      %td{"data-label" => "First Name"}
+        = @admin.first_name
+      %td{"data-label" => "Last Name"}
+        = @admin.last_name    
+      %td{"data-label" => "Contact Number"}
+        = @admin.contact_number
+      %td{"data-label" => "Address"}
+        = @admin.address
       %td{"data-label" => "Actions"} 
         = link_to "Edit", edit_admin_path(@admin.id)
 %br
