--- a/app/views/admins/_form.html.haml
+++ b/app/views/admins/_form.html.haml
@@ -1,20 +1,20 @@
 = form_with model: @admin do |f|
-  = f.label :username
-  = f.text_field :username
+  = f.label :first_name
+  = f.text_field :first_name
   
   %br/
-  = f.label :fullname
-  = f.text_field :fullname
+  = f.label :last_name
+  = f.text_field :last_name
 
   %br/
 
-  = f.label :email
-  = f.email_field :email
+  = f.label :contact_number
+  = f.telephone_field :contact_number
 
   %br/
 
-  = f.label :password
-  = f.text_field :password
+  = f.label :address
+  = f.text_area :address
 
   %br/
   %br/
