--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,3 +8,5 @@
     =link_to 'User Sign Up', new_user_registration_path
   %li
     =link_to 'All Users', users_path
+  %li 
+    =link_to 'Log Out', destroy_user_session_path, method: :delete
