--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -5,8 +5,10 @@
     %tr   
       %th Username
       %th Email
+      %th Type
   %tbody
     -@users.each do |user|
       %tr
         %td= user.username
         %td= user.email
+        %td= user.type
