added type in user controllers and removed fullname, converted type to text field - still not working

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,10 +14,8 @@
   </div>
 
   <div class="field">
-    <%= f.radio_button :type, 'Admin'%>
-    <%= label :type_admin, 'Admin'%> <br />
-    <%= f.radio_button :type, 'Buyer'%>
-    <%= label :type_buyer, 'Buyer'%> <br />
+    <%= f.label :type %><br />
+    <%= f.text_field :type %>
   </div>
 
   <div class="field">
