--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,8 +14,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :type %><br />
-    <%= f.text_field :type %>
+    <%= f.label :user_type %><br />
+    <%= f.text_field :user_type %>
   </div>
 
   <div class="field">
