converted text_field to dropdown

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :user_type %><br />
-    <%= f.text_field :user_type %>
+    <%= f.select :user_type, ['Buyer', 'Admin']%>
   </div>
 
   <div class="field">
