--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,14 +1,23 @@
-%h1 Users#index
-
-%table
-  %thead
-    %tr   
-      %th Username
-      %th Email
-      %th Type
-  %tbody
-    -@users.each do |user|
-      %tr
-        %td= user.username
-        %td= user.email
-        %td= user.user_type
+- if user_signed_in?
+  %h1 All users
+  %table
+    %thead
+      %tr   
+        %th Username
+        %th Email
+        %th Type
+    %tbody
+      -@users.each do |user|
+        %tr
+          %td= user.username
+          %td= user.email
+          %td= user.user_type
+    =link_to 'Log Out', destroy_user_session_path, method: :delete 
+    %br/  
+    =link_to 'Home', root_path       
+- else 
+  %h1 Please sign in to continue
+  %li
+    =link_to 'User Log In', new_user_session_path
+  %li 
+    =link_to 'User Sign Up', new_user_registration_path
