--- a/app/views/buyers/index.html.haml
+++ b/app/views/buyers/index.html.haml
@@ -1,6 +1,7 @@
 %h1 Stock Trading App
 
 %h2 Buyer
+%p= "Welcome, #{current_user.username}!"
 
 .container
   %table
@@ -39,3 +40,5 @@
             = link_to "Delete", buyer_path(buyer.id), method: :delete, data: {confirm: "Are you sure?"}
 %br/
 .p.sub-button=link_to "Add buyer", new_buyer_path
+.p.sub-button=link_to "Log Out", destroy_user_session_path, method: :delete
+
