--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -6,29 +6,23 @@
       %th Contact Number
       %th Address
       %th Verified
-      %th Verified at
-      %th Created by
-      %th Admin ID      
+      %th Verified at     
   %tbody
     %tr
       %td{"data-label" => "First Name"}
-        = @buyer.first_name
+        = @account.first_name
       %td{"data-label" => "Last Name"}
-        = @buyer.last_name    
+        = @account.last_name    
       %td{"data-label" => "Contact Number"}
-        = @buyer.contact_number
+        = @account.contact_number
       %td{"data-label" => "Address"}
-        = @buyer.address
+        = @account.address
       %td{"data-label" => "Verified"}
-        = @buyer.verified
+        = @account.verified
       %td{"data-label" => "Verified at"}
-        = @buyer.verified_at    
-      %td{"data-label" => "Created by"}
-        = @buyer.created_by
-      %td{"data-label" => "Admin ID"}
-        = @buyer.admin_id
+        = @account.verified_at    
 
       %td{"data-label" => "Actions"} 
-        = link_to "Edit", edit_buyer_path(@buyer.id)
+        = link_to "Edit", edit_account_path(@account.id)
 %br
-= link_to "Back to Buyers", buyers_path
+= link_to "Back to accounts", accounts_path
