added disclaimer for updating

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,6 +9,7 @@
   .div.welcome-text
     %h1.welcome Welcome to APP NAME!
     %p.welcome-sub You're almost ready to invest.
+    %p.welcome-sub **update text & links for admin or buyer**
 
 -else
   .div.main-header 
