--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,10 @@
 <div class="main-header">
-  <span class="nav-bar-link"><%= render "devise/shared/links"%></span>
+     <span class="nav-bar-link">
+      <%= link_to 'Log In', new_user_session_path %>
+    </span>
+    <span class="nav-bar-button">
+      <%= link_to 'Sign Up', new_user_registration_path %>
+    </span>
 </div>
 
 
