resized form errors

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -53,8 +53,8 @@
   left: 50%;
   bottom: 0;
   position: fixed;
-  font-size: xx-small;
-  height: 80px;
+  font-size: small;
+  height: 100px;
   transform: translate(-50%, 0);
 }
 
