--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,47 +1,48 @@
-%h1 Stock Trading App
+- if user_signed_in?
+  .div.main-header 
+    .span.nav-bar-link
+      =link_to 'View All Users', users_path
+    .span.nav-bar-link
+      =link_to 'Log Out', destroy_user_session_path, method: :delete
 
-%h2 Accounts
-%p= "Welcome, #{current_user.username}!"
+  .div.account-welcome-container
+    %h1.account-header= "Hello, Admin #{current_user.username}!"
+    %p.account-sub You can manage all APPNAME accounts here.
 
-.container
-  %table
-    %thead
-      %th User Id
-      %th Email
-      %th First Name
-      %th Last Name
-      %th Contact Number
-      %th Address
-      %th User Type
-      %th Verified
-      %th Verified at   
+  %table.all-accounts-container
+    %thead.account-table-header
+      %th.account-header-6 User Id
+      %th.account-header-18 Email
+      %th.account-header-10 First Name
+      %th.account-header-10 Last Name
+      %th.account-header-10 Contact Number
+      %th.account-header-18 Address
+      %th.account-header-6 User Type
+      %th.account-header-6 Verified
+      %th.account-header-6 Verified at
+      %th.account-header-10 Actions 
     %tbody
       - @accounts.each do |account|
-        %tr
-          %td{"data-label" => "User Id"}
+        %tr.account-table-column
+          %td.account-header-6{"data-label" => "User Id"}
             = account.user.id
-          %td{"data-label" => "Email"}
+          %td.account-header-18{"data-label" => "Email"}
             = account.user.email
-          %td{"data-label" => "First Name"}
+          %td.account-header-10{"data-label" => "First Name"}
             = account.first_name
-          %td{"data-label" => "Last Name"}
+          %td.account-header-10{"data-label" => "Last Name"}
             = account.last_name
-          %td{"data-label" => "Contact Number"}
+          %td.account-header-10{"data-label" => "Contact Number"}
             = account.contact_number
-          %td{"data-label" => "Address"}
+          %td.account-header-18{"data-label" => "Address"}
             = account.address
-          %td{"data-label" => "User Type"}
+          %td.account-header-6{"data-label" => "User Type"}
             = account.user.user_type
-          %td{"data-label" => "Verified"}
+          %td.account-header-6{"data-label" => "Verified"}
             = account.verified
-          %td{"data-label" => "Verified_at"}
+          %td.account-header-6{"data-label" => "Verified_at"}
             = account.verified_at
-          %td{"data-label" => "Actions"}  
+          %td.account-header-10{"data-label" => "Actions"}  
             = link_to 'Show', account_path(account.id)
             = link_to "Edit", edit_account_path(account.id)
             = link_to "Delete", account_path(account.id), method: :delete, data: {confirm: "Are you sure?"}
-%br
-.p.sub-button=link_to "Add account", new_account_path
-
-.p.sub-button=link_to "Log Out", destroy_user_session_path, method: :delete
-
