--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,27 +1,21 @@
-%table
-  %thead
-    %tr
-      %th First Name
-      %th Last Name
-      %th Contact Number
-      %th Address
-      %th Verified
-      %th Verified at
-  %tbody
-    %tr
-      %td{"data-label" => "First Name"}
-        = @account.first_name
-      %td{"data-label" => "Last Name"}
-        = @account.last_name
-      %td{"data-label" => "Contact Number"}
-        = @account.contact_number
-      %td{"data-label" => "Address"}
-        = @account.address
-      %td{"data-label" => "Verified"}
-        = @account.verified
-      %td{"data-label" => "Verified at"}
-        = @account.verified_at
-      %td{"data-label" => "Actions"}
-        = link_to "Edit", edit_account_path(@account.id)
-%br
-= link_to "Back to Accounts", accounts_path
+.div.main-header 
+  .span.nav-bar-link
+    =link_to 'Home', root_path
+  .span.nav-bar-link
+    =link_to 'View All Accounts', accounts_path
+  .span.nav-bar-link
+    =link_to 'View All Users', users_path
+  .span.nav-bar-link
+    =link_to 'Log Out', destroy_user_session_path, method: :delete
+
+.div.account-welcome-container
+  %h1.account-header= "#{@account.first_name} #{@account.last_name}"
+  %p.account-sub Account details
+
+  %p.account-detail="First Name: #{@account.first_name}"
+  %p.account-detail="Last Name: #{@account.last_name}"
+  %p.account-detail="Contact Number: #{@account.contact_number}"
+  %p.account-detail="Address: #{@account.address}"
+  %p.account-detail="Verification Status: #{@account.verified}"
+  %p.account-detail="Verification Date: #{@account.verified_at}"
+  = link_to "Edit Account Details", edit_account_path(@account.id)
