removed all redirect to users view

--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,7 +1,7 @@
 - if user_signed_in?
   .div.main-header 
     .span.nav-bar-link
-      =link_to 'View All Users', users_path
+      =link_to 'Home', root_path
     .span.nav-bar-link
       =link_to 'Log Out', destroy_user_session_path, method: :delete
 
