--- a/app/views/wallets/index.html.haml
+++ b/app/views/wallets/index.html.haml
@@ -1,24 +1,40 @@
 %h1 Stock Trading App
 
 %h2 Wallets
+%p= "Welcome, #{current_user.username}!"
 
-.container
-  %table
-    %thead
-      %th Buyer ID
-      %th Actual Balance
+- if current_user.user_type == "Buyer"
+  %p "I AM A BUYER, THIS IS OFF-LIMITS"
+- else
+  .container
+    %table
+      %thead
+        %th User Id
+        %th Email
+        %th Account Id
+        %th First Name
+        %th Last Name
+        %th Actual Balance
  
-    %tbody
-      - @wallets.each do |wallet|
-        %tr
-          %td{"data-label" => "Buyer ID"}
-            = wallet.buyer_id
-          %td{"data-label" => "Actual Balance"}
-            = wallet.actual_balance
+      %tbody
+        - @wallets.each do |wallet|
+          %tr
+            %td{"data-label" => "User Id"}
+              = wallet.account.user.id
+            %td{"data-label" => "Email"}
+              = wallet.account.user.email
+            %td{"data-label" => "Account Id"}
+              = wallet.account_id
+            %td{"data-label" => "First Name"}
+              = wallet.account.first_name
+            %td{"data-label" => "Last Name"}
+              = wallet.account.last_name
+            %td{"data-label" => "Actual Balance"}
+              = wallet.actual_balance
 
-          %td{"data-label" => "Actions"}  
-            = link_to 'Show', wallet_path(wallet.id)
-            = link_to "Edit", edit_wallet_path(wallet.id)
-            = link_to "Delete", wallet_path(wallet.id), method: :delete, data: {confirm: "Are you sure?"}
+            %td{"data-label" => "Actions"}  
+              = link_to 'Show', wallet_path(wallet.id)
+              = link_to "Edit", edit_wallet_path(wallet.id)
+              = link_to "Delete", wallet_path(wallet.id), method: :delete, data: {confirm: "Are you sure?"}
 %br/
 .p.sub-button=link_to "Add wallet", new_wallet_path
