--- a/app/views/wallets/show.html.haml
+++ b/app/views/wallets/show.html.haml
@@ -1,13 +1,22 @@
 %table
   %thead
     %tr
-      %th Buyer ID 
+      %th Account Id
+      %th Email
+      %th First Name
+      %th Last Name
       %th Actual Balance
 
   %tbody
     %tr
-      %td{"data-label" => "Buyer ID"}
-        = @wallet.buyer_id
+      %td{"data-label" => "Account ID"}
+        = @wallet.account_id
+      %td{"data-label" => "Email"}
+        = @wallet.account.user.email
+      %td{"data-label" => "First Name"}
+        = @wallet.account.first_name
+      %td{"data-label" => "Last Name"}
+        = @wallet.account.last_name
       %td{"data-label" => "Actual Balance"}
         = @wallet.actual_balance  
       %td{"data-label" => "Actions"} 
