--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -3,55 +3,58 @@
 %h2 Accounts
 %p= "Welcome, #{current_user.username}!"
 
-.container
-  %table
-    %thead
-      %th User Id
-      %th Email
-      %th Wallet Id
-      %th Actual Balance
-      %th First Name
-      %th Last Name
-      %th Contact Number
-      %th Address
-      %th User Type
-      %th Verified
-      %th Verified at   
-    %tbody
-      - @accounts.each do |account|
-        %tr
-          %td{"data-label" => "User Id"}
-            = account.user.id
-          %td{"data-label" => "Email"}
-            = account.user.email
-          %td{"data-label" => "Wallet Id"}
-            - if account.user.user_type == 'Buyer'
-              = account.wallet.id
-            - else
-              = '-admin-'
-          %td{"data-label" => "Actual Balance"}
-            - if account.user.user_type == 'Buyer'
-              = account.wallet.actual_balance
-            - else
-              = '-admin-'
-          %td{"data-label" => "First Name"}
-            = account.first_name
-          %td{"data-label" => "Last Name"}
-            = account.last_name
-          %td{"data-label" => "Contact Number"}
-            = account.contact_number
-          %td{"data-label" => "Address"}
-            = account.address
-          %td{"data-label" => "User Type"}
-            = account.user.user_type
-          %td{"data-label" => "Verified"}
-            = account.verified
-          %td{"data-label" => "Verified_at"}
-            = account.verified_at
-          %td{"data-label" => "Actions"}  
-            = link_to 'Show', account_path(account.id)
-            = link_to "Edit", edit_account_path(account.id)
-            = link_to "Delete", account_path(account.id), method: :delete, data: {confirm: "Are you sure?"}
+- if current_user.user_type == "Buyer"
+  %p "I AM A BUYER, THIS IS OFF-LIMITS"
+- else
+  .container
+    %table
+      %thead
+        %th User Id
+        %th Email
+        %th Wallet Id
+        %th Actual Balance
+        %th First Name
+        %th Last Name
+        %th Contact Number
+        %th Address
+        %th User Type
+        %th Verified
+        %th Verified at   
+      %tbody
+        - @accounts.each do |account|
+          %tr
+            %td{"data-label" => "User Id"}
+              = account.user.id
+            %td{"data-label" => "Email"}
+              = account.user.email
+            %td{"data-label" => "Wallet Id"}
+              - if account.user.user_type == 'Buyer'
+                = account.wallet.id
+              - else
+                = '-admin-'
+            %td{"data-label" => "Actual Balance"}
+              - if account.user.user_type == 'Buyer'
+                = account.wallet.actual_balance
+              - else
+                = '-admin-'
+            %td{"data-label" => "First Name"}
+              = account.first_name
+            %td{"data-label" => "Last Name"}
+              = account.last_name
+            %td{"data-label" => "Contact Number"}
+              = account.contact_number
+            %td{"data-label" => "Address"}
+              = account.address
+            %td{"data-label" => "User Type"}
+              = account.user.user_type
+            %td{"data-label" => "Verified"}
+              = account.verified
+            %td{"data-label" => "Verified_at"}
+              = account.verified_at
+            %td{"data-label" => "Actions"}  
+              = link_to 'Show', account_path(account.id)
+              = link_to "Edit", edit_account_path(account.id)
+              = link_to "Delete", account_path(account.id), method: :delete, data: {confirm: "Are you sure?"}
 %br
 .p.sub-button=link_to "Add account", new_account_path
 
