--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,14 @@ body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
+
+// Brand colors
+
+$dark-blue: #023047;
+$light-blue: #219ebc;
+$lighter-blue: #8ecae6;
+$yellow: #ffb703;
+$orange: #fb8500;
+$dark-grey: #666666;
+$light-grey: rgb(172, 172, 172);
+$white: #ffffff;
