--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,10 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+@import "application";
+
 .main-header {
   width: 100%;
   height: 65px;
-  background-color: grey;
+  background-color: $dark-blue;
   position: fixed;
   top: 0;
   left: 0;
@@ -22,22 +24,22 @@
 }
 
 .nav-bar-link a:link {
-  color: #fff;
+  color: $white;
   text-decoration: none;
 }
 
 .nav-bar-link a:visited {
-  color: #fff;
+  color: $white;
   text-decoration: none;
 }
 
 .nav-bar-link a:hover {
-  color: rgb(109, 66, 151);
+  color: $dark-blue;
   text-decoration: none;
 }
 
 .nav-bar-button {
-  background-color: rebeccapurple;
+  background-color: $yellow;
   color: #fff;
   text-transform: uppercase;
   padding: 12px 30px;
@@ -49,7 +51,7 @@
 }
 
 .nav-bar-button:hover {
-  background-color: rgb(107, 74, 117);
+  background-color: $orange;
 }
 
 .nav-bar-button a:link {
@@ -71,7 +73,7 @@
 }
 
 .welcome {
-  color: #4b4b4b;
+  color: $dark-grey;
   font-size: 2.7em;
 }
 
