--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,21 +6,23 @@
 
 .main-header {
   width: 100%;
-  height: 65px;
+  height: 165px;
   background-color: $dark-blue;
   position: fixed;
   top: 0;
   left: 0;
-  margin-bottom: 30px;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  align-items: baseline;
 }
 .nav-bar-link {
   color: #fff;
   text-align: right;
-  margin: 22px 30px;
+  margin-right: 30px;
   text-transform: uppercase;
+  position: relative;
+  top: 60%;
 }
 
 .nav-bar-link a:link {
@@ -34,7 +36,7 @@
 }
 
 .nav-bar-link a:hover {
-  color: $dark-blue;
+  color: $yellow;
   text-decoration: none;
 }
 
@@ -45,13 +47,16 @@
   padding: 12px 30px;
   text-align: center;
   vertical-align: middle;
-  margin: 10px 30px;
-  margin-right: 120px;
+  margin: 0 30px;
+
   border-radius: 8px;
+  height: 22px;
+  position: relative;
+  top: 60%;
 }
 
 .nav-bar-button:hover {
-  background-color: $orange;
+  background-color: $yellow;
 }
 
 .nav-bar-button a:link {
