--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@ $light-blue: #219ebc;
 $lighter-blue: #8ecae6;
 $yellow: #ffb703;
 $orange: #fb8500;
-$dark-grey: #666666;
+$dark-grey: #3d3d3d;
+$med-grey: #666666;
 $light-grey: rgb(172, 172, 172);
 $white: #ffffff;
