--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -72,9 +72,10 @@
 .welcome-text {
   margin: 0;
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
+  max-height: 300px;
 }
 
 .welcome {
@@ -83,6 +84,6 @@
 }
 
 .welcome-sub {
-  color: grey;
+  color: $med-grey;
   font-size: 1.5em;
 }
