--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,6 @@
-// Place all the styles related to the Home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-
 @import "application";
 
-.main-header-home {
+.main-header {
   width: 100%;
   height: 165px;
   background-color: $dark-blue;
@@ -16,31 +12,31 @@
   justify-content: flex-end;
   align-items: baseline;
 }
-.nav-bar-link-home {
+.nav-bar-link {
   color: #fff;
   text-align: right;
-  margin: 0 30px;
+  margin-right: 30px;
   text-transform: uppercase;
   position: relative;
   top: 60%;
 }
 
-.nav-bar-link-home a:link {
+.nav-bar-link a:link {
   color: $white;
   text-decoration: none;
 }
 
-.nav-bar-link-home a:visited {
+.nav-bar-link a:visited {
   color: $white;
   text-decoration: none;
 }
 
-.nav-bar-link-home a:hover {
+.nav-bar-link a:hover {
   color: $yellow;
   text-decoration: none;
 }
 
-.nav-bar-button-home {
+.nav-bar-button {
   background-color: $yellow;
   color: #fff;
   text-transform: uppercase;
@@ -54,36 +50,35 @@
   top: 60%;
 }
 
-.nav-bar-button-home:hover {
-  background-color: $orange;
+.nav-bar-button:hover {
+  background-color: $yellow;
 }
 
-.nav-bar-button-home a:link {
+.nav-bar-button a:link {
   color: #fff;
   text-decoration: none;
 }
 
-.nav-bar-button-home a:visited {
+.nav-bar-button a:visited {
   color: #fff;
   text-decoration: none;
 }
 
-.welcome-text-home {
+.welcome-text {
   margin: 0;
   position: absolute;
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-height: 100vw;
-  width: 60vw;
+  max-height: 300px;
 }
 
-.welcome-home {
+.welcome {
   color: $dark-grey;
-  font-size: 2.8em;
+  font-size: 2.7em;
 }
 
-.welcome-sub-home {
+.welcome-sub {
   color: $med-grey;
-  font-size: 1.8em;
+  font-size: 1.5em;
 }
