--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,26 +1,26 @@
 - if user_signed_in?
-  .div.main-header 
+  .div.main-header-home
     .div.logo
       =image_tag "logo/logo.png", width: "auto", height: "100px" 
-    .span.nav-bar-link
+    .span.nav-bar-link-home
       =link_to 'View All Accounts', accounts_path
-    .span.nav-bar-link
+    .span.nav-bar-link-home
       =link_to 'Log Out', destroy_user_session_path, method: :delete
 
-  .div.welcome-text
-    %h1.welcome Welcome to PenguInvest!
-    %p.welcome-sub You're one of the millions who've already discovered smarter investing in multiple types of assets
+  .div.welcome-text-home
+    %h1.welcome-home Welcome to PenguInvest!
+    %p.welcome-sub-home You're one of the millions who've already discovered smarter investing in multiple types of assets
 
 -else
-  .div.main-header 
+  .div.main-header-home
     .div.logo
       =image_tag "logo/logo.png", width: "auto", height: "120px" 
-    .span.nav-bar-link
+    .span.nav-bar-link-home
       = link_to 'Log In', new_user_session_path
-    .span.nav-bar-button
+    .span.nav-bar-button-home
       = link_to 'Sign Up', new_user_registration_path
 
-  .div.welcome-text
-    %h1.welcome Trade with confidence on the world's leading social trading platform
-    %p.welcome-sub Join millions who've already discovered smarter investing in multiple types of assets
+  .div.welcome-text-home
+    %h1.welcome-home Trade with confidence on the world's leading social trading platform
+    %p.welcome-sub-home Join millions who've already discovered smarter investing in multiple types of assets
 
