--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PenguINVEST</title>
+    <title>PenguInvest</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -19,5 +19,10 @@
     <p class="alert"><%= alert %></p>
     <%= flash[:error] %>
     <%= yield %>
+
   </body>
+  <footer class="main-footer">
+    <span class="footer-text"> Created by Thea Kaylee Libunao & Ria Almeda. © 2022. Disclaimer: This app is created for educational purposes only.
+ </span>
+  </footer>
 </html>
