--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -1,6 +1,8 @@
 // Place all the styles related to the Buyer controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+@import "application";
+
 .account-welcome-container {
   margin-left: 40px;
   position: fixed;
