--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,5 +1,7 @@
 - if user_signed_in? && current_user.user_type == "Admin"
   .div.main-header 
+     .div.logo
+      =image_tag "logo/logo.png", width: "auto", height: "120px" 
     .span.nav-bar-link
       =link_to 'Home', root_path
     .span.nav-bar-link
@@ -51,6 +53,8 @@
 
 -else
   .div.main-header 
+    .div.logo
+      =image_tag "logo/logo.png", width: "auto", height: "120px" 
     .span.nav-bar-link
       = link_to 'Log In', new_user_session_path
     .span.nav-bar-button
