--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -27,3 +27,6 @@
   .div.welcome-text-home
     %h1.welcome-home Trade with confidence on the world's leading social trading platform
     %p.welcome-sub-home Join millions who've already discovered smarter investing in multiple types of assets
+
+  .div.main-footer
+    .span.footer-text Created by Thea Kaylee Libunao & Ria Almeda. © 2022. Disclaimer: This app is created for educational purposes only.
