--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -3,11 +3,12 @@
 .main-footer {
   background-color: inherit;
   width: 100%;
-  position: fixed;
+  position: absolute;
   bottom: 0;
+  left: 0;
   text-align: center;
-  padding-bottom: 25px;
   vertical-align: middle;
   color: $med-grey;
   font-size: smaller;
+  margin-bottom: 25px;
 }
