--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 165px;
   background-color: $dark-blue;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   display: flex;
