--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,6 +10,8 @@
   .div.welcome-text-home
     %h1.welcome-home Welcome to PenguInvest!
     %p.welcome-sub-home You're one of the millions who've already discovered smarter investing in multiple types of assets
+  .div.main-footer
+    .span.footer-text Created by Thea Kaylee Libunao & Ria Almeda. © 2022. Disclaimer: This app is created for educational purposes only.
 
 -else
   .div.main-header-home
@@ -23,4 +25,8 @@
   .div.welcome-text-home
     %h1.welcome-home Trade with confidence on the world's leading social trading platform
     %p.welcome-sub-home Join millions who've already discovered smarter investing in multiple types of assets
+
+  .div.main-footer
+    .span.footer-text Created by Thea Kaylee Libunao & Ria Almeda. © 2022. Disclaimer: This app is created for educational purposes only.
+
 
