--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,4 +30,5 @@ $orange: #fb8500;
 $dark-grey: #3d3d3d;
 $med-grey: #666666;
 $light-grey: rgb(172, 172, 172);
+$lighter-grey: #e4e1e1;
 $white: #ffffff;
