--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -9,7 +9,9 @@
 
   .div.account-welcome-container
     %h1.account-header= "Hello, Admin #{current_user.username}!"
-    %p.account-sub You can manage all APPNAME accounts here.
+    %p.account-sub You can manage all PenguInvest accounts here.
+  .div
+    =link_to "Add New User", new_user_registration_path, :class => "account-button"
 
   %table.all-accounts-container
     %thead.account-table-header
