--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -64,4 +64,8 @@
 
   .div.welcome-text
     %h1.welcome Trade with confidence on the world's leading social trading platform
-    %p.welcome-sub Join millions who've already discovered smarter investing in multiple types of assets            
+    %p.welcome-sub Join millions who've already discovered smarter investing in multiple types of assets     
+
+  .div.main-footer
+    .span.footer-text Created by Thea Kaylee Libunao & Ria Almeda. © 2022. Disclaimer: This app is created for educational purposes only.
+       
