added logo in edit style

--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -1,4 +1,6 @@
 .div.main-header 
+  .div.logo
+    =image_tag "logo/logo.png", width: "auto", height: "120px"
   .span.nav-bar-link
     =link_to 'Home', root_path
   .span.nav-bar-link
