--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -24,7 +24,7 @@
   width: 90vw;
   margin: 0;
   position: absolute;
-  top: 82%;
+  top: 75vh;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
