--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -1,12 +1,14 @@
 .div.main-header 
+  .div.logo
+    =image_tag "logo/logo.png", width: "auto", height: "120px"
   .span.nav-bar-link
     =link_to 'Home', root_path
   .span.nav-bar-link
     =link_to 'View All Accounts', accounts_path
   .span.nav-bar-link
     =link_to 'Log Out', destroy_user_session_path, method: :delete
-.div.account-welcome-container
-  %h1.account-header= "Hello, Admin #{current_user.username}!"
-  %p.account-sub= "Edit #{@account.first_name}'s details"   
+.div.account-edit-container
+  %h1.account-header-edit= "Hello, Admin #{current_user.username}!"
+  %p.account-sub-edit= "Update #{@account.first_name}'s account details"   
 
 = render 'form' 
