--- a/app/views/wallets/index.html.haml
+++ b/app/views/wallets/index.html.haml
@@ -1,7 +1,11 @@
 - if user_signed_in? && current_user.user_type == "Buyer"
   .div.main-header 
+    .div.logo
+      =image_tag "logo/logo.png", width: "auto", height: "120px"
     .span.nav-bar-link
       =link_to 'Home', root_path
+    .span.nav-bar-link
+      =link_to 'Wallet', wallets_path
     .span.nav-bar-link
       =link_to 'Portfolio', portfolios_path
     .span.nav-bar-link
